--- a/deno.jsonc
+++ b/deno.jsonc
@@ -2,10 +2,10 @@
   "name": "@lenskit/typeline",
   "version": "0.1.0",
   "imports": {
-    "zod": "npm:zod@^3.23",
+    "zod": "npm:zod@^3.23"
   },
   "exports": {
-    ".": "./mod.ts",
+    ".": "./mod.ts"
   },
   "lint": {
     "rules": {
@@ -30,5 +30,5 @@
   "fmt": {
     "lineWidth": 100,
     "indentWidth": 2
-  },
+  }
 }
