some random pipeline code

--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,9 +1,7 @@
 {
   "name": "@lenskit/typeline",
   "version": "0.1.0",
-  "imports": {
-    "zod": "npm:zod@^3.23"
-  },
+  "imports": { "@std/path": "jsr:@std/path@^1.0.6", "zod": "npm:zod@^3.23" },
   "exports": {
     ".": "./mod.ts"
   },
