--- a/deno.jsonc
+++ b/deno.jsonc
@@ -2,6 +2,7 @@
   "name": "@lenskit/typeline",
   "version": "0.1.0",
   "imports": {
+    "@cliffy/command": "jsr:@cliffy/command@^1.0.0-rc.7",
     "@std/assert": "jsr:@std/assert@^1.0.6",
     "@std/path": "jsr:@std/path@^1.0.6",
     "@std/testing": "jsr:@std/testing@^1.0.3",
