successfully render workflow files

--- a/deno.jsonc
+++ b/deno.jsonc
@@ -10,7 +10,9 @@
     "zod": "npm:zod@^3.23"
   },
   "exports": {
-    ".": "./mod.ts"
+    ".": "./mod.ts",
+    "./cli": "./cli.ts",
+    "./github": "./github/mod.ts"
   },
   "lint": {
     "rules": {
