--- a/deno.jsonc
+++ b/deno.jsonc
@@ -5,6 +5,7 @@
   "imports": {
     "@cliffy/command": "jsr:@cliffy/command@^1.0.0-rc.7",
     "@std/assert": "jsr:@std/assert@^1.0.6",
+    "@std/fs": "jsr:@std/fs@^1.0.13",
     "@std/path": "jsr:@std/path@^1.0.6",
     "@std/testing": "jsr:@std/testing@^1.0.3",
     "@std/yaml": "jsr:@std/yaml@^1.0.5",
